@@ -1,3 +1,7 @@
+2002-01-07  Per Bothner  <per@bothner.com>
+
+	* XQParser.java (parseContent):  Handle '{{' and '}}'.
+
 2002-01-02  Per Bothner  <per@bothner.com>
 
 	* XQuery.java (<init>):  Define 'number' and 'concat'.
